responsive_styles.css
/* custom font */
@font-face {
    font-family: 'icomoonregular';
    src: url('mdd_tnr_icomoon-webfont.woff2') format('woff2'),
         url('mdd_tnr_icomoon-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

	-text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
	-webkit-text-stroke: 0.24px;
	-moz-osx-font-smoothing: grayscale;
}

/* video background */
#backgroundVideo {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
}

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
}

.maincontainer {
  min-height: 100%;
  position: relative;
}

/* header logo styles */
.logocontainer {
  height: 100%;
  text-align: center;
  color: white;
  text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
  font-size: 40px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
  padding-top: 64px;
  padding-right: 0px;
  padding-left: 64px;
  padding-bottom: 64px;
}

#logo {
  width: 400px;
  height: 128px;
  background-color: rgba(0,0,0,0); /* For browsers that do not support gradients */
  background-image: linear-gradient(to bottom right, rgba(85,54,125,0.48), rgba(58,179,176,0.48));
}

.logotext {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* link styles */
.blockcontainer {
  position: absolute;
  left: 0;
  bottom: 0;
  padding-bottom: 64px;
  padding-left: 64px;
}

.linkscontainer {
  display: inline-block;
  width: 200px;
  height: 100%;
}

.buttonheader {
  position: relative;
  left:0px;
  text-align: left;
  color: white;
  font-size: 20px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
  padding-bottom: 8px;
}

.buttonpadding {
  padding-bottom: 24px;
}

.bottombuttonpadding {
  padding-bottom: 0px;
}

.link {
  position: relative;
  left:0px;
  text-align: left;
  color: white;
  font-size: 32px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
}

a:link {
  text-decoration: none;
  color: white;
}

a:visited {
  text-decoration: none;
  color: white;
}

a:hover {
  text-decoration: none;
  color: white;
}

a:active {
  text-decoration: none;
  color: white;
}

/* contact form */

.formcontainer {
  position: relative;
  padding-left: 64px;
  padding-bottom: 400px;
  width: 960px;
}
  
.formtext {
  text-align: left;
  padding-bottom: 16px;
}

.forminputstyle{
  background-color: rgba(32,32,32,0.9);
  border: 0;
  margin: 0;
  padding-left: 12px;
  width: 100%;
  height: 32px;
  font-size: 20px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
  color: white;
  box-sizing:border-box;
}

.forminputstyle:focus {
    outline-width: 0;
}

.formmessageinputstyle{
  background-color: rgba(32,32,32,0.9);
  border: 0;
  margin: 0;
  padding-left: 12px;
  width: 100%;
  height: 400px;
  font-size: 20px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
  color: white;
  box-sizing:border-box;
}

.formmessageinputstyle:focus {
    outline-width: 0;
}

.sendbutton{
  background-color: rgba(48,48,48,0.9);
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 40px;
  font-size: 20px;
  font-weight: 1;
  font-family: icomoonregular, "Times New Roman", Times;
  color: white;
  text-align: left;
  border-top: 1px solid rgba(64,64,64,0.9);
  box-sizing: border-box;
}

.sendbutton:hover{
  background-color: rgba(32,32,32,0.9);
}

.sendpadding{
	padding-left: 12px;	
}

/* small screens */

		/* background video */
@media screen and (max-width: 721px) {
    #background-video { display: none; }
    body {
    background: url("contour_static.png") no-repeat;
    background-size: auto 100%;
    }
}


@media screen and (max-width: 1160px) {
        /* header logo styles */
        .logocontainer {
          height: 100%;
          text-align: center;
          color: white;
          text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
          font-size:calc(16px + 2vw);
          font-weight: 1;
          font-family: icomoonregular, "Times New Roman", Times;
          padding-top: 5.6vw;
          padding-left: 5.6vw;
          padding-bottom: 5.6vw;
        }

        .logocentre {
          position: absolute;
          left: 0px;
        }

        #logo {
          max-width: 400px;
          min-width: 240px;
          max-height: 128px;
          min-height: 77px;
          width: 35.5vw;
          height: 11.2vw;
          background-color: rgba(0,0,0,0); /* For browsers that do not support gradients */
          background-image: linear-gradient(to bottom right, rgba(85,54,125,0.48), rgba(58,179,176,0.48));
        }

        .logotext {
          position: relative;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }



        /* link styles */
        .blockcontainer {
          position: relative;
          padding-bottom: 5.6vw;
          padding-left: 5.6vw;
          padding-top: 5.6vw;

        }


        .linkscontainer {
          display: inline;
          width: 200px;
        }

        .buttonheader {
          position: relative;
          left:0px;
          text-align: left;
          color: white;
          font-size: calc(12px + 1vw);
          font-weight: 1;
          font-family: icomoonregular, "Times New Roman", Times;
          padding-bottom: 8px;
        }

        .buttonpadding {
          padding-bottom: 12px;
        }

        .bottombuttonpadding {
          padding-bottom: 32px;
        }

        .link {
          position: relative;
          left:0px;
          text-align: left;
          color: white;
          font-size: calc(14px + 1.6vw);
          font-weight: 1;
          font-family: icomoonregular, "Times New Roman", Times;
        }



		/* contact form */

		.formcontainer {
		  position: relative;
		  padding-left: 5.6vw;
		  padding-right: 5.6vw;
		  padding-bottom: 5.6vw;
		  width: inherit;
		  
		}
		  
		.formtext {
		  text-align: left;
		  padding-bottom: 16px;
		}

		.forminputstyle{
		  background-color: rgba(32,32,32,0.9);
		  border: 0;
		  margin: 0;
		  padding-left: 1.2vw;
		  width: 100%;
		  height: calc(18px + 1.6vw);
		  font-size: calc(12px + 1.1vw);
		  font-weight: 1;
		  font-family: icomoonregular, "Times New Roman", Times;
		  color: white;
		  box-sizing:border-box;
		}

		

		.formmessageinputstyle{
		  background-color: rgba(32,32,32,0.9);
		  border: 0;
		  margin: 0;
		  padding-left: 1.2vw;
		  width: 100%;
		  height: 20vh;
		  min-height: 160px;
		  font-size: calc(12px + 1.1vw);
		  font-weight: 1;
		  font-family: icomoonregular, "Times New Roman", Times;
		  color: white;
		  box-sizing:border-box;
		}

		

		.sendbutton{
		  background-color: rgba(48,48,48,0.9);
		  border: 0;
		  margin: 0;
		  padding: 0;
		  width: 100%;
		  height: calc(20px + 1.6vw);
		  font-size: calc(12px + 1.1vw);
		  font-weight: 1;
		  font-family: icomoonregular, "Times New Roman", Times;
		  color: white;
		  text-align: left;
		  border-top: 1px solid rgba(64,64,64,0.9);
		  box-sizing: border-box;
		}
		
		.sendpadding{
				padding-left: 1.2vw;
		}
  }
}

